sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:4: error: not found: value getNombreValeurs
  var n = getNombreValeurs()-1;
          ^DutchFlagAlgo:13: error: not found: value Couleur
    v = Couleur(i);
        ^