sort.dutchflag.DutchFlagAlgo.scala.code
def solve()
{
  var n = getNombreValeurs()-1;
  var dernier = 0;
  var x = 0;
  var v = 0;
  var j = 0;
  var currCouleur = 0;
  
  for (i <- 1 to n)
  {
    v = Couleur(i);
    x = v+1;
    dernier = i;
    j = i;
    
    while (j>0 && x>v)
    {
      x = getCouleur(j-1);
      if (x > v)
      {
        echange(j, j-1);
        dernier = j-1;
      }
      j-=1;
    }
    echange(dernier, i);
  }
}